--- a/package.json
+++ b/package.json
@@ -8,27 +8,34 @@
   "scripts": {
     "build": "parcel build index.html",
     "dev": "parcel index.html --open",
-    "start": "npm run build && npm run dev",
+    "start": "parcel index.html --open",
     "tsc": "tsc",
     "test": "jest --watchAll"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
+    "@parcel/packager-raw-url": "^2.7.0",
+    "@parcel/transformer-webmanifest": "^2.7.0",
     "@types/jest": "^29.2.0",
     "babel-jest": "^29.2.2",
-    "jest": "^29.2.2",
+    "canvas": "^2.10.1",
+    "electron": "^21.2.2",
+    "jest": "^26.0.0",
     "jest-canvas-mock": "^2.4.0",
+    "jest-electron": "^0.1.12",
     "jest-webgl-canvas-mock": "^0.2.3",
-    "parcel-bundler": "^1.12.4",
-    "pixi.js-legacy": "^6.5.8",
+    "parcel": "^2.7.0",
+    "pixi.js-legacy": "^7.0.0",
+    "prettier": "^2.7.1",
+    "querystring-es3": "^0.2.1",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4",
-    "webgl-mock": "^0.1.7"
+    "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@pixi/node": "^6.5.8",
-    "canvas": "^2.10.1",
-    "pixi.js": "^6.5.8"
+    "pixi.js": "^7.0.0"
   }
 }
+
+
