--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.isequal": "^4.5.0",
     "pixi.js": "^7.0.3"
   }
 }
