--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@parcel/packager-raw-url": "^2.7.0",
     "@parcel/transformer-webmanifest": "^2.7.0",
     "@types/jest": "^29.2.0",
+    "@types/lodash.clonedeep": "^4.5.7",
+    "@types/lodash.isequal": "^4.5.6",
     "babel-jest": "^29.2.2",
     "canvas": "^2.10.1",
     "electron": "^21.2.2",
@@ -33,6 +35,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@pixi/loaders": "^6.5.8",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "pixi.js": "^7.0.3"
